Described base API structure.
